@@ -213,6 +213,7 @@ Version 1.5
  - Add KAIPULEK Celling PIR Sensor (Nechry)
  - Add Sensative Strips Confort (Nechry)
  - Add Secure Controls (Horstmann) SRT-321 Thermostat (Nechry)
+ - Add Aeotec ZWA001 LED Bulb 6 Multi-White (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
